salesforce-main/src/main/default/objects/Matching_Rule_Category_Map__mdt/Matching_Rule_Category_Map__mdt.object-meta.xml
<CustomObject>
    <description>Used to map a Matching Rule to a category.</description>
    <label>Matching Rule Category Map</label>
    <pluralLabel>Matching Rule Category Maps</pluralLabel>
</CustomObject>