salesforce-main/src/main/default/objects/Matching_Rule_Category_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not a Matching Rule Category Map should be used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>