salesforce-main/src/main/default/objects/Matching_Rule_Category_Map__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Indicates the position of a Category Map in relation to other Category Maps.</description>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>