salesforce-main/src/main/default/objects/Matching_Rule_Category_Map__mdt/validationRules/Index_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Index_must_be_positive</fullName>
    <active>true</active>
    <description>Index value must be greater than 0</description>
    <errorConditionFormula>Index__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Index__c</errorDisplayField>
    <errorMessage>Index value must be greater than 0</errorMessage>
</ValidationRule>